<resources>
    <string name="app_name">Exchanger</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guncel_kurlar_tab">GuncelKurlarTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_guncel_kur_tab">GuncelKurTabActivity</string>
    <string name="title_activity_tab___hesap_ozeti">Tab_Activity_HesapOzeti</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_varliklarim_">Varliklarim_Activity</string>
    <string name="hakkinda_tanim">Tanım</string>
      <string name="hakkinda_tanim_icerik">
        Mobil Sanal Döviz Uygulaması ile sanal ortamda riske girmeden alım, satım stratejilerinizi geliştirebilir, kendinize
        döviz yatırımları konusunda tecrube katabilirsiniz. Dilediğiniz döviz türünün güncel kur değerini görüp, bütün döviz türlerinde
        size tahsis edilen sanal tl üzerinden, alım, satım işlemlerinizi gerçekleştirebilirsiniz. Ayrıca döviz türlerinin günlük, haftalık,
        aylık ve yıllık değerlerini grafik üstünde analiz edebilir, bu sayede yatırımlarınıza yön verebilirsiniz. Uygulama içinde bulunan
        döviz çevirici ile döviz değerlerini çapraz kur hesaplamaları ile birbirlerine dönüştürebilirsiniz.
    </string>
    <string name="hakkinda_alimsatim">Alım &amp; Satım İşlemleri </string>
    <string name="hakkinda_alimsatim_icerik">
        Sol menüde bulunan Alım &amp; Satım İşlemleri başlığı altından istediğiniz işlemleri gerçekleştirebilirsiniz.
        Alım işlemi sonunda alınan döviz türü; miktarı,maliyeti, güncel TL değeri ve bu döviz türünün kar zarar durumu Varlıklarınıza eklenir.
        Ayrıca kullanım kolaylığı açısından satım işlemi sayfanızda yalnızca varlıklarınız listelenmektedir. Eğer varlığınız yoksa satım işlemi gerçekleyemezsiniz.

    </string>
    <string name="hakkinda_grafikler">Grafikler</string>
    <string name="hakkinda_grafikler_icerik">
        Uygulama içinde bulunan grafikler ile istediğiniz döviz türünün, günlük, haftalık, aylık ve yıllık zaman dilimindeki değerini grafik üstünde analiz edebilir,
        istediğiniz zaman içerisindeki döviz değer dalgalanmalarına göre gelecekteki döviz yatırımlarınıza yön verebilirsiniz.
    </string>
    <string name="hakkinda_varliklar">Varlıklarım</string>
    <string name="hakkinda_varliklar_icerik">
        Uygulamada aldığınız döviz değerlerini, sol menüde bulunan "Varlıklarım" sekmesinden görebilirsiniz. Bu başlıkta bulunan
        sekmeler ile varlıklarınızı hem dairesel grafik üstünde yüzdelik veya miktara bağlı şekilde inceleyebilir, hem de
        ikinci sekmede bulunan varlık detayları ile varlıklarınızı daha detaylı analiz edebilirsiniz.
    </string>
    <string name="hakkinda_dövizcevirici">Döviz Çevirici </string>
    <string name="hakkinda_dövizcevirici_icerik">
        "Döviz Çevirici" sekmesi ile güncel kur değerlerinin birbirlerine çevrimini, çapraz kur hesaplamalarını yapabilirsiniz.
        Kullanım kolaylığı açısından seçilen döviz türü bağlı olmaksızın, değerin diğer bütün döviz değerlerine dönüşümü o an içinde yapılıp,
        kullanıcıya sunulur. Kullanıcı çeviriciyi hem alım hem de satım değeri üstünden hesaplayabilir.
    </string>
    <string name="hakkinda_hesapgecmisi">Hesap Geçmişim </string>
    <string name="hakkinda_hesapgecmisi_icerik">
        Sol menüde "Hesap Geçmişim" başlığı altında bulunan sekmeler ile daha önceden, şuanki zamana kadar yaptığınız bütün
        alım, satım işlemlerinizi ve detaylarını görebilirsiniz. İşlem kayıtlarında tutulan detaylar ile yaptığınız her işlemin,
        para türü, miktarı, maliyeti, getirisi ve işlemin yapıldığı tarihi görebilirsiniz. Bu başlıkta bulunan sekmeler ile sadece
        alım, sadece satım veya bütün işlemlerinizi ayrı ayrı görebilirsiniz. Ayrıca yapılan alım ve satım işlemlerini çerçeve renginden
        ayırtedebilirsiniz.
    </string>
    <string name="hakkinda_profilim">Profilim</string>
    <string name="hakkinda_profilim_icerik">
        Üye olduktan sonra oluşturulan profilinizi sol menüde bulunan "Profil Bilgilerim" sekmesi ile güncelleyebilir, ister mailinizi
        ister sifrenizi tek tıkla değiştirebilirsiniz. Ayrıca "Hesabımı Sil" sekmesi ile hesabınızı tamamen kaldırabilirsiniz. Unutmayın yaptığınız
        alım satım işlemleri ve bütün varlıklarınız profilinizin altında kaydolmaktadır. Sol menüde bulunan "Oturumu Kapat" sekmesini
        kullanarak oturumunuzu güvenli bir şekilde kapatabilirsiniz.
    </string>
</resources>
