<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_tanim"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/introContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_tanim_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/introText"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/playText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_alimsatim"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/introContentText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/playContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_alimsatim_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/playText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/hitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_grafikler"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/playContentText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/hitContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_grafikler_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/hitText"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/standText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_varliklar"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/hitContentText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/standContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_varliklar_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/standText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/hakkinda_Dovizcevirici"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_dövizcevirici"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/standContentText"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/hakkinda_Dovizcevirici_icerik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_dövizcevirici_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/hakkinda_Dovizcevirici"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/dealerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_hesapgecmisi"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/hakkinda_Dovizcevirici_icerik"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/dealerContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_hesapgecmisi_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/dealerText"
        android:layout_marginTop="20dp"
        />

    <!--
        <TextView
            android:id="@+id/dealText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_deal_title"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/playContentText"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/dealContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_deal_content"
            android:textColor="@android:color/white"
            android:layout_below="@+id/dealText"
            android:layout_marginTop="20dp"
            />
            -->
    <!--
    <TextView
        android:id="@+id/pistiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_pisti_title"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/dealContentText"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/pistiContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_pisti_content"
        android:textColor="@android:color/white"
        android:layout_below="@+id/pistiText"
        android:layout_marginTop="20dp"
        />
    -->
    <TextView
        android:id="@+id/scoringText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_profilim"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/dealerContentText"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/scoringContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hakkinda_profilim_icerik"
        android:textColor="@android:color/white"
        android:layout_below="@+id/scoringText"
        android:layout_marginTop="20dp"
        />

</merge>
